--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ section {
 
 .navbar__menu li {
     display: inline-block;
+    color: black;
 }
 
 .navbar__menu .menu__link {
@@ -95,6 +96,7 @@ section {
     top: 0;
     width: 100%;
     z-index: 5;
+    height: 90px;
 }
 
 /* Footer Styles */
