--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,11 @@ section {
     transition: ease 0.3s all;
 }
 
+.active {
+    color: red; /* or any other style to highlight the active link */
+}
+
+
 /* Header Styles */
 .page__header {
     background: #fff;
