--- a/css/styles.css
+++ b/css/styles.css
@@ -108,12 +108,28 @@ section {
 #page__header {
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
-  }
-  
-  #page__header.fade-in {
+}
+
+#page__header.fade-in {
     opacity: 1;
-  }
-  
+}
+
+
+.scroll-to-top-btn {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    z-index: 999;
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.scroll-to-top-btn.show {
+    display: block;
+    opacity: 1;
+}
+
 
 /* Footer Styles */
 .page__footer {
