--- a/css/styles.css
+++ b/css/styles.css
@@ -65,15 +65,26 @@ section {
 
 /* Navigation Styles*/
 .navbar__menu ul {
+    justify-content: right;
+    display: flex;
+    align-items: center;
     padding-left: 0;
     margin: 0;
     text-align: right;
+    height: 100%;
 }
 
-.navbar__menu li {
+/* .navbar__menu li {
+    padding-right: 12px;
     display: inline-block;
     color: black;
-}
+} */
+
+/* .navbar__menu li a{
+    text-decoration: none;
+    color: black;
+} */
+
 
 .navbar__menu .menu__link {
     display: block;
@@ -89,8 +100,18 @@ section {
     transition: ease 0.3s all;
 }
 
+.navbar__list li {
+    list-style-type: none;
+}
+
+
+
+
+
+
 .active {
-    color: red;
+    color: #ffffff !important;
+    background-color: black;
     /* or any other style to highlight the active link */
 }
 
@@ -102,7 +123,7 @@ section {
     top: 0;
     width: 100%;
     z-index: 5;
-    height: 90px;
+    height: 50px;
 }
 
 #page__header {
