--- a/css/styles.css
+++ b/css/styles.css
@@ -75,8 +75,12 @@ section {
 }
 
 .navbar__menu .menu__link {
-    display: block;
-    padding: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    padding-right: 1em;
+    padding-left: 1em;
     font-weight: bold;
     text-decoration: none;
     color: #000;
@@ -95,6 +99,16 @@ section {
 .active {
     color: #ffffff !important;
     background-color: black;
+}
+
+.z-index-99{
+    z-index: -999 !important;
+}
+
+@media only screen and (max-width: 35em) {
+    .navbar__list li{
+        font-size: 0.75em;
+    }
 }
 
 /* Header Styles */
